--- a/src/components/ProjectHeader.astro
+++ b/src/components/ProjectHeader.astro
@@ -17,7 +17,7 @@ const { project } = Astro.props;
 ---
 
 <header class="relative">
-  <div class="h-[40vh] md:h-[60vh] w-full relative">
+  <div class="h-[20vh]  w-full relative">
     <img
       src={project.image}
       alt={project.title}
